Source and demo install docs altered to use less problematic JAVA_OPTS settings, and amplify the discussion somewhat
git-svn-id: https://source.sakaiproject.org/svn/trunk/sakai@5926 66ffb92e-73f9-0310-93c1-f5514f145a0a